Updating file names for documentation site

--- a/documentation/2. Building web apps with geoip.md
+++ b/documentation/2. Building web apps with geoip.md
@@ -1,4 +1,4 @@
-# Building an application with geoip
+# Building web apps with geoip
 
 When you build an application using Dashboard you need to set up your Dashboard server on its own hosting and write your application.  Because Dashboard handles a lot of content for you your application only neeeds a `/` guest landing page and `/home` user application page to get started.
 
@@ -26,7 +26,7 @@ Start your dashboard server:
     $ NODE_ENV="production" \
       DASHBOARD_SERVER="http://localhost:8000" \
       APPLICATION_SERVER="http://localhost:8001" \
-      APPLICATION_SERVER_TOKEN="abcdef123456" \
+      APPLICATION_SERVER_TOKENd="abcdef123456" \
       DOMAIN="localhost:8000" \
       node main.js
 
